# fusion-reel

./: README.md
docs/: 00_index.md  01_query_understanding.md  02_content_search.md  03_intelligent_filtering.md  04_data_management.md  05_performance_scalability.md  06_user_interface.md  07_architecture_overview.md  08_design_choices_tradeoffs.md  09_drawbacks_limitations.md  10_future_roadmap.md
src/: .gitignore  app.py  cli.py  config.yaml  pyproject.toml  requirements.txt  search_engine.py
src/config/: loader.py
src/fusion/: rrf_fusion.py
src/indexer/: bm25_indexer.py  semantic_indexer.py  test_bm25_indexer.py
src/llm/: gemini_handler.py
src/query_parser/: llm_parser.py  regex_parser.py
src/utils/: __init__.py  formatters.py
